# ext4-crypt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ext4-crypt.h
src/: container.c  ext4-crypt.c  keys.c
